REGRESSION (r132422): Page content and scrollbars are incorrectly offset after restoring a page from the page cache https://bugs.webkit.org/show_bug.cgi?id=109317 <rdar://problem/12649131>

Reviewed by Simon Fraser.

Mark all scrolling that occurs beneath FrameView::layout as programmatic.

Test: platform/mac-wk2/tiled-drawing/tiled-drawing-scroll-position-page-cache-restoration.html

* page/FrameView.cpp:
(WebCore::FrameView::layout):

Add a test that ensures that scroll position is correctly restored for pages coming out of the page cache when tiled drawing is enabled.

* platform/mac-wk2/tiled-drawing/resources/go-back.html: Added.
* platform/mac-wk2/tiled-drawing/resources/scroll-and-load-page.html: Added.
* platform/mac-wk2/tiled-drawing/tiled-drawing-scroll-position-page-cache-restoration.html: Added.


Canonical link: https://commits.webkit.org/127657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142416 268f45cc-cd09-0410-ab3c-d52691b4dbfc